--- a/search/index.html
+++ b/search/index.html
@@ -11,7 +11,9 @@
 <meta property='og:site_name' content='FissionNeutron的博客'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="搜索">
-<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://linkvesta.top/search/index.json"><style>
+<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://linkvesta.top/search/index.json">
+    <link rel="shortcut icon" href="favicon/favicon.ico" />
+<style>
     :root {
         --article-font-family: "Noto Serif", "Noto Serif SC", var(--base-font-family);
     }
