deploy: FissionNeutron/Blog_Source@139a7381b03c3323294f6d5e818c2200811438ba

--- a/search/index.html
+++ b/search/index.html
@@ -50,7 +50,17 @@
 		display: block;
 		text-indent: -2.5em;
 	}
-</style><link rel="preload" href="https://linkvesta.top/search/index.json" as="fetch" crossorigin="anonymous">
+</style>
+
+<style>
+	.katex-display {
+	  min-height: 100%;
+	  width: 100%;
+	  overflow-x: auto;
+	  overflow-y: hidden;
+	}
+
+  </style><link rel="preload" href="https://linkvesta.top/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
     <body class="template-search">
     <script>
