--- a/search/index.html
+++ b/search/index.html
@@ -3,15 +3,15 @@
     <head><meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content=''><title>搜索</title>
 
-<link rel='canonical' href='https://linkvesta.top/search/'>
+<link rel='canonical' href='https://fissionneutron.com/search/'>
 
 <link rel="stylesheet" href="/scss/style.min.873c62cd62b354e610df4d1832ff4ecfcb1d111919d779ae324ee0fbd51d37fd.css"><meta property='og:title' content='搜索'>
 <meta property='og:description' content=''>
-<meta property='og:url' content='https://linkvesta.top/search/'>
+<meta property='og:url' content='https://fissionneutron.com/search/'>
 <meta property='og:site_name' content='FissionNeutron的博客'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="搜索">
-<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://linkvesta.top/search/index.json">
+<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://fissionneutron.com/search/index.json">
     <link rel="shortcut icon" href="/favicon/favicon.ico" />
 <style>
     :root {
@@ -78,14 +78,7 @@
 
 </style>
 
-<style>
-	.katex-display {
-	  min-height: 100%;
-	  width: 100%;
-	  overflow-x: auto;
-	  overflow-y: hidden;
-	}
-</style><link rel="preload" href="https://linkvesta.top/search/index.json" as="fetch" crossorigin="anonymous">
+<link rel="preload" href="https://fissionneutron.com/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
     <body class="template-search">
     <script>
@@ -147,7 +140,7 @@
             
                 <li>
                     <a 
-                        href='mailto:admin@linkvesta.top'
+                        href='mailto:admin@fissionneutron.com'
                         target="_blank"
                         title="Email"
                     >
@@ -293,7 +286,7 @@
     </ol>
 </aside>
 <main class="main full-width">
-<form action="https://linkvesta.top/search/" class="search-form"data-json="https://linkvesta.top/search/index.json">
+<form action="https://fissionneutron.com/search/" class="search-form"data-json="https://fissionneutron.com/search/index.json">
     <p>
         <label>搜索</label>
         <input name="keyword" placeholder="输入关键词..." />
